Add static list

--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,9 @@
   "presets": ["es2015", "react"],
   "plugins": [
     ["module-resolver", {
-      "root": ["../"],
+      "root": ["./app/components"],
       "alias": {
-        "Main": "./app/components/Main.jsx",
-        "AppStyles": "./app/styles/app.scss"
+        "AppStyles": "./app/styles/app.scss",
       }
     }]
   ]
