--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.14.1",
     "jest": "^18.1.0",
+    "node-uuid": "^1.4.7",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^3.0.2"
