--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
       "bower_components",
       "shared"
     ],
+    "setupTestFrameworkScriptFile": "./jest/LocalStorage.js",
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
