--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.14.1",
     "jest": "^18.1.0",
+    "moment": "^2.17.1",
+    "momentjs": "^2.0.0",
     "node-uuid": "^1.4.7",
     "react": "15.4.2",
     "react-dom": "15.4.2",
